--- a/app/assets/stylesheets/components/_ticket_show.scss
+++ b/app/assets/stylesheets/components/_ticket_show.scss
@@ -6,6 +6,12 @@
   border-top: none;
 }
 
+.rounded-pill-wrapper {
+  min-width: 70px;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .img-show {
   width: 100%;
   height: 250px;
