--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -49,23 +49,35 @@
           <%else%>
             <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg"/>
           <%end%>
+        <%# card info %>
         <div class="card-index-infos">
+        <%# category & title %>
           <h2><strong><%= ticket.category %></strong>: <%= ticket.title %></h2>
+          <%# status %>
           <div class="d-flex justify-content-between align-items-center ">
-            <% if ticket.status == "nouveau" %>
-              <span class="card-index-nouveau rounded-pill"><%= ticket.status.capitalize %></span>
-            <% elsif ticket.status == "actif" %>
-              <span class="card-index-encours rounded-pill"><%= ticket.status.capitalize %></span>
-            <% elsif ticket.status == "résolu" %>
-              <span class="card-index-resolu rounded-pill"><%= ticket.status.capitalize %></span>
-            <% end %>
-          <div>
-            <% if ticket.manager_id == nil %>
-            <% else %>
-                <p class="index-manager"><i class="fa-solid fa-user-tie fa-xl" style="color: #1e2024;"></i> <strong><%= ticket.manager.first_name.first %>. <%= ticket.manager.last_name %></strong></p>
-            <% end %>
-          </div>
-            <p style="vertical-align: -0.5em;"><i class="fa-solid fa-circle-exclamation fa-xl" style="color: <%= progress_point(ticket.priority)[:color] %>; vertical-align: -0.5em;"></i></p>
+
+            <%# manager %>
+              <% if ticket.manager_id == nil %>
+                <div class="d-none"></div>
+              <% else %>
+                <div>
+                  <p class="index-manager"><i class="fa-solid fa-user-tie fa-xl" style="color: #1e2024;"></i> <strong><%= ticket.manager.first_name.first %>. <%= ticket.manager.last_name %></strong></p>
+                </div>
+              <% end %>
+            <%# priority %>
+            <div>
+              <p style="vertical-align: -0.5em;"><i class="fa-solid fa-circle-exclamation fa-xl" style="color: <%= progress_point(ticket.priority)[:color] %>; vertical-align: -0.5em;"></i></p>
+            </div>
+            <%# status %>
+            <div class="rounded-pill-wrapper">
+              <% if ticket.status == "nouveau" %>
+                <span class="card-index-nouveau rounded-pill"><%= ticket.status.capitalize %></span>
+              <% elsif ticket.status == "actif" %>
+                <span class="card-index-encours rounded-pill"><%= ticket.status.capitalize %></span>
+              <% elsif ticket.status == "résolu" %>
+                <span class="card-index-resolu rounded-pill"><%= ticket.status.capitalize %></span>
+              <% end %>
+            </div>
           </div>
         </div>
       </div>
